[metadata]
name = tsc-utils
description = A set of utility scripts for working with TSC, the scripting language used in Cave Story.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cave-story-randomizer/tsc-utils
author = duncathan salt

classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6
